--- a/config/murphpad.conf
+++ b/config/murphpad.conf
@@ -9,7 +9,7 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Change 'y' to 'n' to disable OLED
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 
 ### POWER-SAVING SETTINGS ###
 
@@ -19,15 +19,15 @@ CONFIG_ZMK_IDLE_TIMEOUT=300000
 # Change 'y' to 'n' to disable deep sleep.
 # In deep sleep the board will also disconnect from Bluetooth and cut external power.
 # It may take several seconds for a board to wake from deep sleep after a key is pressed.
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
 # How long the board will stay in idle mode before going to deep sleep (ms). 3600000 ms = 1 hour.
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 ### RGB SETTINGS ###
 
 # Change both 'y' to 'n' to disable RGB
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 
 # When set to 'n', turning off RGB will NOT cut power to the board VCC pin.
 # This impacts battery life as the LEDs draw significant power even when "off".
@@ -36,10 +36,10 @@ CONFIG_WS2812_STRIP=y
 # A. OLED VCC has been connected to board RAW instead
 # - or -
 # B. You don't mind that turning off RGB also turns off the OLED
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+#CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # Change 'y' to 'n' to keep RGB on when the keyboard goes idle.
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # Change 'n' to 'y' to turn off RGB when the keyboard is disconnected from USB.
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
