--- a/build.yaml
+++ b/build.yaml
@@ -11,6 +11,5 @@
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
-include:
-    - board: nice_nano_v2
-      shield: [ "murphpad", "settings_reset" ]
+board: [ "nice_nano", "nice_nano_v2" ]
+shield: [ "murphpad", "settings_reset" ]
